resolve overflow issues of the demo pages #2798

--- a/src/BlazorUI/Playground/Bit.BlazorUI.Playground/Web/Shared/MainLayout.razor.scss
+++ b/src/BlazorUI/Playground/Bit.BlazorUI.Playground/Web/Shared/MainLayout.razor.scss
@@ -4,10 +4,27 @@
 @import '../Styles/abstracts/_mixins.scss';
 @import '../Styles/abstracts/_fonts.scss';
 
+::deep a {
+    text-decoration: none;
+}
+
+::deep * {
+    font-family: "Axiforma";
+    box-sizing: border-box;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+    //overflow: auto;
+}
+
 .main-container {
+    width: 100%;
+    //height: 100%;
+    //overflow: auto;
     display: flex;
     position: relative;
-    width: 100%;
     min-height: 100vh;
     padding-top: rem(80px);
     box-sizing: border-box;
@@ -97,10 +114,9 @@
         display: flex;
         justify-content: center;
         flex-flow: row nowrap;
-
-        @include lt-lg {
-            top: rem(-35px);
-        }
+        //@include lt-lg {
+        //    top: rem(-35px);
+        //}
     }
 
     @mixin LeftContactLinkContainer {
@@ -113,20 +129,19 @@
         justify-content: center;
         flex-flow: column nowrap;
         transform: translateY(-50%);
-
-        a {
-            background-color: $B4Color;
-        }
+        //a {
+        //    background-color: $B4Color;
+        //}
     }
 
     .contact-link-container--home {
-        @media all and (min-width: #{em(1335px)}) {
-            @include LeftContactLinkContainer;
-        }
-
-        @media all and (max-width: #{em(1334px)}) {
-            @include BottomContactLinkContainer;
-        }
+        @include BottomContactLinkContainer;
+        //@media all and (min-width: #{em(1335px)}) {
+        //    @include LeftContactLinkContainer;
+        //}
+        //@media all and (max-width: #{em(1334px)}) {
+        //    @include BottomContactLinkContainer;
+        //}
     }
 
     .contact-link-container {
@@ -139,17 +154,16 @@
         border-radius: 50%;
         background-position: center;
         background-repeat: no-repeat;
-        background-color: $B2Color;
+        background-color: $B4Color;
         cursor: pointer;
         margin: rem(8px);
         background-size: rem(21px);
-
-        @include lt-lg {
-            width: rem(24px);
-            height: rem(24px);
-            margin: rem(4px);
-            background-size: rem(8px);
-        }
+        //@include lt-lg {
+        //    width: rem(24px);
+        //    height: rem(24px);
+        //    margin: rem(4px);
+        //    background-size: rem(8px);
+        //}
     }
 
     .twitter-link {
@@ -166,7 +180,7 @@
         background-image: url('/images/github-icon.svg');
 
         &:hover {
-            background-color: #171515;
+            background-color: #141414;
         }
     }
 
@@ -285,35 +299,31 @@
     }
 }
 
-::deep a {
-    text-decoration: none;
-}
+//::-webkit-scrollbar {
+//    width: 16px;
+//    background-color: #fff;
+//}
 
-::deep * {
-    font-family: "Axiforma";
-    box-sizing: border-box;
-}
+//::-webkit-scrollbar-track {
+//    background-color: #fff;
+//}
 
-::-webkit-scrollbar {
-    width: 6px;
-}
+//::-webkit-scrollbar-thumb {
+//    background-color: #babac0;
+//    border-radius: 16px;
+//    border: 4px solid #fff;
+//}
 
-::-webkit-scrollbar-thumb {
-    background: #DFECFF;
-    border-radius: 8px;
-    border: 5px solid #DFECFF;
-}
+//::-webkit-scrollbar-button {
+//    display: none;
+//}
 
-::-webkit-scrollbar-thumb:hover {
-    background: #5CA1FF;
-    border-radius: 8px;
-    border: 4px solid #5CA1FF;
-}
+//::-webkit-scrollbar-thumb:hover {
+//    background: #5CA1FF;
+//    border-radius: 8px;
+//    border: 4px solid #5CA1FF;
+//}
 
-::-webkit-scrollbar-button {
-    display: none;
-}
-
-::-webkit-scrollbar:horizontal {
-    height: 6px;
-}
+//::-webkit-scrollbar:horizontal {
+//    height: 6px;
+//}
